Don't let incompat message overlap with install button (bug 911179)

--- a/hearth/media/css/listing.styl
+++ b/hearth/media/css/listing.styl
@@ -557,6 +557,7 @@ ratings-sidebar() {
         clear: left;
     }
     .info + .bad-app {
+        padding-right: 100px;
         padding-top: 8px;
     }
     .mkt-tile {
